<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:id="@+id/FrameLayout1"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:layout_gravity="center_horizontal|center_vertical"
    android:background="#FFFFFF" >

    <ScrollView
        android:id="@+id/scrollView1"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:fillViewport="true" >

        <LinearLayout
            android:id="@+id/linearLayout1"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:baselineAligned="false"
            android:gravity="center" >

            <TableLayout
                android:id="@+id/tableLayout1"
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="0.80"
                android:shrinkColumns="0,1,2,3,4,5"
                android:stretchColumns="0,1,2,3,4,5" >

                <TableRow
                    android:id="@+id/tableRow1"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_weight="1" >

                    <Button
                        android:id="@+id/button_7"
                        android:layout_width="0dip"
                        android:layout_height="match_parent"
                        android:layout_weight="1"
                        android:background="@drawable/button_layout"
                        android:text="@string/btn7"
                        android:textSize="30sp" />

                    <Button
                        android:id="@+id/button_8"
                        android:layout_width="0dip"
                        android:layout_height="match_parent"
                        android:layout_weight="1"
                        android:background="@drawable/button_layout"
                        android:text="@string/btn8"
                        android:textSize="30sp" />

                    <Button
                        android:id="@+id/button_9"
                        android:layout_width="0dip"
                        android:layout_height="match_parent"
                        android:layout_weight="1"
                        android:background="@drawable/button_layout"
                        android:text="@string/btn9"
                        android:textSize="30sp" />

                    <Button
                        android:id="@+id/button_mult"
                        android:layout_width="0dip"
                        android:layout_height="match_parent"
                        android:layout_marginLeft="5dp"
                        android:layout_marginRight="5dp"
                        android:layout_weight="1"
                        android:background="@drawable/button_layout"
                        android:text="@string/mult"
                        android:textSize="30sp" />
                </TableRow>

                <ImageView
                    android:layout_width="fill_parent"
                    android:layout_height="wrap_content"
                    android:contentDescription="@string/divider"
                    android:padding="6dp"
                    android:scaleType="fitXY"
                    android:src="@android:drawable/divider_horizontal_textfield" />

                <TableRow
                    android:id="@+id/tableRow2"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_weight="1" >

                    <Button
                        android:id="@+id/button_4"
                        android:layout_width="0dip"
                        android:layout_height="match_parent"
                        android:layout_weight="1"
                        android:background="@drawable/button_layout"
                        android:text="@string/btn4"
                        android:textSize="30sp" />

                    <Button
                        android:id="@+id/button_5"
                        android:layout_width="0dip"
                        android:layout_height="match_parent"
                        android:layout_weight="1"
                        android:background="@drawable/button_layout"
                        android:text="@string/btn5"
                        android:textSize="30sp" />

                    <Button
                        android:id="@+id/button_6"
                        android:layout_width="0dip"
                        android:layout_height="match_parent"
                        android:layout_weight="1"
                        android:background="@drawable/button_layout"
                        android:text="@string/btn6"
                        android:textSize="30sp" />

                    <Button
                        android:id="@+id/button_div"
                        android:layout_width="0dip"
                        android:layout_height="match_parent"
                        android:layout_marginLeft="5dp"
                        android:layout_marginRight="5dp"
                        android:layout_weight="1"
                        android:background="@drawable/button_layout"
                        android:text="@string/div"
                        android:textSize="30sp" />
                </TableRow>

                <ImageView
                    android:layout_width="fill_parent"
                    android:layout_height="wrap_content"
                    android:contentDescription="@string/divider"
                    android:padding="6dp"
                    android:scaleType="fitXY"
                    android:src="@android:drawable/divider_horizontal_textfield" />

                <TableRow
                    android:id="@+id/tableRow3"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_weight="1" >

                    <Button
                        android:id="@+id/button_1"
                        android:layout_width="0dip"
                        android:layout_height="match_parent"
                        android:layout_weight="1"
                        android:background="@drawable/button_layout"
                        android:text="@string/btn1"
                        android:textSize="30sp" />

                    <Button
                        android:id="@+id/button_2"
                        android:layout_width="0dip"
                        android:layout_height="match_parent"
                        android:layout_weight="1"
                        android:background="@drawable/button_layout"
                        android:text="@string/btn2"
                        android:textSize="30sp" />

                    <Button
                        android:id="@+id/button_3"
                        android:layout_width="0dip"
                        android:layout_height="match_parent"
                        android:layout_weight="1"
                        android:background="@drawable/button_layout"
                        android:text="@string/btn3"
                        android:textSize="30sp" />

                    <Button
                        android:id="@+id/button_sub"
                        android:layout_width="0dip"
                        android:layout_height="match_parent"
                        android:layout_marginLeft="5dp"
                        android:layout_marginRight="5dp"
                        android:layout_weight="1"
                        android:background="@drawable/button_layout"
                        android:text="@string/sub"
                        android:textSize="30sp" />
                </TableRow>

                <ImageView
                    android:layout_width="fill_parent"
                    android:layout_height="wrap_content"
                    android:contentDescription="@string/divider"
                    android:padding="6dp"
                    android:scaleType="fitXY"
                    android:src="@android:drawable/divider_horizontal_textfield" />

                <TableRow
                    android:id="@+id/tableRow4"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_weight="1" >

                    <Button
                        android:id="@+id/button_0"
                        android:layout_width="0dip"
                        android:layout_height="match_parent"
                        android:layout_weight="2"
                        android:background="@drawable/button_layout"
                        android:text="@string/btn0"
                        android:textSize="30sp" />

                    <Button
                        android:id="@+id/button_dot"
                        android:layout_width="0dip"
                        android:layout_height="match_parent"
                        android:layout_weight="1"
                        android:background="@drawable/button_layout"
                        android:text="@string/btndot"
                        android:textSize="30sp" />

                    <Button
                        android:id="@+id/button_add"
                        android:layout_width="0dip"
                        android:layout_height="match_parent"
                        android:layout_marginLeft="5dp"
                        android:layout_marginRight="5dp"
                        android:layout_weight="1"
                        android:background="@drawable/button_layout"
                        android:text="@string/add"
                        android:textSize="30sp" />
                </TableRow>
            </TableLayout>

            <LinearLayout
                android:id="@+id/linearLayout2"
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_gravity="center"
                android:layout_weight="0.20"
                android:orientation="vertical" >

                <LinearLayout
                    android:id="@+id/linearLayout3"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:layout_gravity="top"
                    android:layout_weight="1"
                    android:orientation="vertical" >

                    <Button
                        android:id="@+id/button_ac"
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:layout_weight="1"
                        android:background="@drawable/button_layout"
                        android:text="@string/AC"
                        android:textSize="30sp" />

                    <Button
                        android:id="@+id/button_bracket"
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:layout_weight="1"
                        android:background="@drawable/button_layout"
                        android:text="@string/bracket"
                        android:textSize="30sp" />
                </LinearLayout>

                <LinearLayout
                    android:id="@+id/linearLayout4"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:layout_gravity="center"
                    android:layout_weight="1"
                    android:orientation="vertical" >

                    <Button
                        android:id="@+id/button_equal"
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:layout_weight="1"
                        android:background="@drawable/button_layout"
                        android:text="@string/equal"
                        android:textSize="30sp" />
                </LinearLayout>
            </LinearLayout>
        </LinearLayout>
    </ScrollView>

</FrameLayout>