<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:id="@+id/FrameLayout1"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:layout_gravity="center_horizontal|center_vertical"
    android:background="#FFFFFF" >

    <ScrollView
        android:id="@+id/scrollView1"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:fillViewport="true" >

        <LinearLayout
            android:id="@+id/linearLayout1"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:baselineAligned="false"
            android:gravity="center" >

            <TableLayout
                android:id="@+id/tableLayout1"
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="0.60"
                android:shrinkColumns="0,1,2,3,4,5"
                android:stretchColumns="0,1,2,3,4,5" >

                <TableRow
                    android:id="@+id/tableRow1"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_weight="1" >

                    <Button
                        android:id="@+id/button_sin"
                        android:layout_width="0dp"
                        android:layout_height="match_parent"
                        android:layout_weight="1"
                        android:background="@drawable/button_layout"
                        android:text="@string/sin"
                        android:textSize="30sp" />

                    <Button
                        android:id="@+id/button_cos"
                        android:layout_width="0dp"
                        android:layout_height="match_parent"
                        android:layout_weight="1"
                        android:background="@drawable/button_layout"
                        android:text="@string/cos"
                        android:textSize="30sp" />

                    <Button
                        android:id="@+id/button_tan"
                        android:layout_width="0dp"
                        android:layout_height="match_parent"
                        android:layout_weight="1"
                        android:background="@drawable/button_layout"
                        android:text="@string/tan"
                        android:textSize="30sp" />
                </TableRow>

                <ImageView
                    android:layout_width="fill_parent"
                    android:layout_height="wrap_content"
                    android:contentDescription="@string/divider"
                    android:padding="6dp"
                    android:scaleType="fitXY"
                    android:src="@android:drawable/divider_horizontal_textfield" />

                <TableRow
                    android:id="@+id/tableRow2"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_weight="1" >

                    <Button
                        android:id="@+id/button_root"
                        android:layout_width="0dp"
                        android:layout_height="match_parent"
                        android:layout_weight="1"
                        android:background="@drawable/button_layout"
                        android:text="@string/root"
                        android:textSize="30sp" />

                    <Button
                        android:id="@+id/button_exp"
                        android:layout_width="0dp"
                        android:layout_height="match_parent"
                        android:layout_weight="1"
                        android:background="@drawable/button_layout"
                        android:text="@string/exp"
                        android:textSize="30sp" />

                    <Button
                        android:id="@+id/button_pow"
                        android:layout_width="0dp"
                        android:layout_height="match_parent"
                        android:layout_weight="1"
                        android:background="@drawable/button_layout"
                        android:text="@string/pow"
                        android:textSize="30sp" />
                </TableRow>

                <ImageView
                    android:layout_width="fill_parent"
                    android:layout_height="wrap_content"
                    android:contentDescription="@string/divider"
                    android:padding="6dp"
                    android:scaleType="fitXY"
                    android:src="@android:drawable/divider_horizontal_textfield" />

                <TableRow
                    android:id="@+id/tableRow3"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_weight="1" >

                    <Button
                        android:id="@+id/button_factorial"
                        android:layout_width="0dp"
                        android:layout_height="match_parent"
                        android:layout_weight="1"
                        android:background="@drawable/button_layout"
                        android:text="@string/factorial"
                        android:textSize="30sp" />

                    <Button
                        android:id="@+id/button_ln"
                        android:layout_width="0dp"
                        android:layout_height="match_parent"
                        android:layout_weight="1"
                        android:background="@drawable/button_layout"
                        android:text="@string/ln"
                        android:textSize="30sp" />

                    <Button
                        android:id="@+id/button_log"
                        android:layout_width="0dp"
                        android:layout_height="match_parent"
                        android:layout_weight="1"
                        android:background="@drawable/button_layout"
                        android:text="@string/log"
                        android:textSize="30sp" />
                </TableRow>

                <ImageView
                    android:layout_width="fill_parent"
                    android:layout_height="wrap_content"
                    android:contentDescription="@string/divider"
                    android:padding="6dp"
                    android:scaleType="fitXY"
                    android:src="@android:drawable/divider_horizontal_textfield" />

                <TableRow
                    android:id="@+id/tableRow4"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_weight="1" >

                    <Button
                        android:id="@+id/button_E"
                        android:layout_width="0dp"
                        android:layout_height="match_parent"
                        android:layout_weight="1"
                        android:background="@drawable/button_layout"
                        android:text="@string/expbase"
                        android:textSize="30sp" />

                    <Button
                        android:id="@+id/button_pi"
                        android:layout_width="0dp"
                        android:layout_height="match_parent"
                        android:layout_weight="1"
                        android:background="@drawable/button_layout"
                        android:text="@string/pi"
                        android:textSize="30sp" />

                    <Button
                        android:id="@+id/button_x"
                        android:layout_width="0dp"
                        android:layout_height="match_parent"
                        android:layout_weight="1"
                        android:background="@drawable/button_layout"
                        android:text="@string/variable"
                        android:textSize="30sp" />
                </TableRow>
            </TableLayout>

            <LinearLayout
                android:id="@+id/linearLayout2"
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_gravity="center"
                android:layout_weight="0.20"
                android:orientation="vertical" >

                <LinearLayout
                    android:id="@+id/linearLayout3"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:layout_gravity="top"
                    android:layout_weight="1"
                    android:orientation="vertical" >

                    <Button
                        android:id="@+id/button_ac"
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:layout_weight="1"
                        android:background="@drawable/button_layout"
                        android:text="@string/AC"
                        android:textSize="30sp" />

                    <Button
                        android:id="@+id/button_useAns"
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:layout_weight="1"
                        android:background="@drawable/button_layout"
                        android:text="@string/use_answer"
                        android:textSize="30sp" />
                </LinearLayout>

                <LinearLayout
                    android:id="@+id/linearLayout4"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:layout_gravity="center"
                    android:layout_weight="1"
                    android:orientation="vertical" >

                    <Button
                        android:id="@+id/button_graph"
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:layout_weight="1"
                        android:background="@drawable/button_layout"
                        android:text="@string/makegraph"
                        android:textSize="30sp" />
                </LinearLayout>
            </LinearLayout>
        </LinearLayout>

    </ScrollView>

</FrameLayout>